// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`elm-pages run --coverage > console output matches snapshot 1`] = `
"Hello, world!
Goodbye, world!
short

── Coverage Report ──────────────────────────────────────

  Module     Covered   Total   Coverage
  ────────────────────────────────────
  Greet            6      10      60.0%
  RunGreet         1       1     100.0%
  ────────────────────────────────────
  TOTAL            7      11      63.6%

  Coverage report written to <FIXTURE>/coverage/lcov.info
"
`;

exports[`elm-pages run --coverage > lcov.info matches snapshot 1`] = `
"TN:
SF:<FIXTURE>/lib/Greet.elm
FN:18,greet
FN:33,classify
FN:48,formalGreet
FNDA:3,greet
FNDA:1,classify
FNDA:0,formalGreet
FNF:3
FNH:2
BRDA:20,0,0,2
BRDA:23,0,1,1
BRDA:26,0,2,0
BRDA:39,0,3,0
BRDA:42,0,4,1
BRF:5
BRH:3
DA:18,3
DA:19,3
DA:20,2
DA:21,2
DA:22,3
DA:23,1
DA:24,1
DA:25,3
DA:26,0
DA:27,0
DA:33,1
DA:34,1
DA:35,1
DA:36,1
DA:37,1
DA:38,1
DA:39,0
DA:40,1
DA:41,1
DA:42,1
DA:48,0
DA:49,0
DA:50,0
DA:51,0
DA:52,0
DA:53,0
LF:26
LH:17
end_of_record

TN:
SF:<FIXTURE>/src/RunGreet.elm
FN:9,run
FNDA:1,run
FNF:1
FNH:1
DA:9,1
DA:10,1
DA:11,1
DA:12,1
DA:13,1
DA:14,1
DA:15,1
DA:16,1
LF:8
LH:8
end_of_record
"
`;

exports[`elm-pages run --coverage --coverage-exclude > console output excludes Greet module 1`] = `
"Hello, world!
Goodbye, world!
short

── Coverage Report ──────────────────────────────────────

  Module     Covered   Total   Coverage
  ────────────────────────────────────
  RunGreet         1       1     100.0%
  ────────────────────────────────────
  TOTAL            1       1     100.0%

  Coverage report written to <FIXTURE>/coverage/lcov.info
"
`;

exports[`elm-pages run --coverage --coverage-exclude > lcov.info only contains non-excluded modules 1`] = `
"TN:
SF:<FIXTURE>/src/RunGreet.elm
FN:9,run
FNDA:1,run
FNF:1
FNH:1
DA:9,1
DA:10,1
DA:11,1
DA:12,1
DA:13,1
DA:14,1
DA:15,1
DA:16,1
LF:8
LH:8
end_of_record
"
`;

exports[`elm-pages run --coverage --coverage-exclude-module > console output excludes the filtered module 1`] = `
"Hello, world!
Goodbye, world!
short

── Coverage Report ──────────────────────────────────────

  Module   Covered   Total   Coverage
  ──────────────────────────────────
  Greet          6      10      60.0%
  ──────────────────────────────────
  TOTAL          6      10      60.0%

  Coverage report written to <FIXTURE>/coverage/lcov.info
"
`;

exports[`elm-pages run --coverage --coverage-exclude-module > lcov.info excludes the filtered module 1`] = `
"TN:
SF:<FIXTURE>/lib/Greet.elm
FN:18,greet
FN:33,classify
FN:48,formalGreet
FNDA:3,greet
FNDA:1,classify
FNDA:0,formalGreet
FNF:3
FNH:2
BRDA:20,0,0,2
BRDA:23,0,1,1
BRDA:26,0,2,0
BRDA:39,0,3,0
BRDA:42,0,4,1
BRF:5
BRH:3
DA:18,3
DA:19,3
DA:20,2
DA:21,2
DA:22,3
DA:23,1
DA:24,1
DA:25,3
DA:26,0
DA:27,0
DA:33,1
DA:34,1
DA:35,1
DA:36,1
DA:37,1
DA:38,1
DA:39,0
DA:40,1
DA:41,1
DA:42,1
DA:48,0
DA:49,0
DA:50,0
DA:51,0
DA:52,0
DA:53,0
LF:26
LH:17
end_of_record
"
`;

exports[`elm-pages run --coverage --coverage-include > console output only includes Greet module 1`] = `
"Hello, world!
Goodbye, world!
short

── Coverage Report ──────────────────────────────────────

  Module   Covered   Total   Coverage
  ──────────────────────────────────
  Greet          6      10      60.0%
  ──────────────────────────────────
  TOTAL          6      10      60.0%

  Coverage report written to <FIXTURE>/coverage/lcov.info
"
`;

exports[`elm-pages run --coverage --coverage-include > lcov.info only contains included modules 1`] = `
"TN:
SF:<FIXTURE>/lib/Greet.elm
FN:18,greet
FN:33,classify
FN:48,formalGreet
FNDA:3,greet
FNDA:1,classify
FNDA:0,formalGreet
FNF:3
FNH:2
BRDA:20,0,0,2
BRDA:23,0,1,1
BRDA:26,0,2,0
BRDA:39,0,3,0
BRDA:42,0,4,1
BRF:5
BRH:3
DA:18,3
DA:19,3
DA:20,2
DA:21,2
DA:22,3
DA:23,1
DA:24,1
DA:25,3
DA:26,0
DA:27,0
DA:33,1
DA:34,1
DA:35,1
DA:36,1
DA:37,1
DA:38,1
DA:39,0
DA:40,1
DA:41,1
DA:42,1
DA:48,0
DA:49,0
DA:50,0
DA:51,0
DA:52,0
DA:53,0
LF:26
LH:17
end_of_record
"
`;
